--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,13 @@
     <string name="loginTextLabel">Accede a tu cuenta</string>
     <string name="user">Usuario</string>
     <string name="password">Contraseña</string>
-    <string name="title">Route Map</string>
-    <string name="description">Route Map se trata de una aplicación que te permitira buscar el camino más optimo para desplazarte a los lugares que necesites.</string>
     <string name="loginLabel">Iniciar sesion</string>
-    <string name="RegisterTextLabel">¿Todavia no tienes una cuenta?</string>
-    <string name="RegisterLabel">Registrarse</string>
+    <string name="registerTextLabel">¿Todavia no tienes una cuenta?</string>
+    <string name="registerLabel">Registrarse</string>
+
+    <!-- Register layout -->
+    <string name="email">Email</string>
+    <string name="password2">Confirmar contraseña</string>
+    <string name="enviar">Enviar</string>
+    <string name="registerDescription">Rellene los siguientes campos para completar el registro de su cuenta</string>
 </resources>
