--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="password2">Confirmar contraseña</string>
     <string name="enviar">Enviar</string>
     <string name="registerDescription">Rellene los siguientes campos para completar el registro de su cuenta</string>
+
+    <!-- Map layout -->
+    <string name="add">Añadir</string>
+    <string name="filter">Filtrar</string>
+    <string name="help">Ayuda</string>
+
 </resources>
