--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="route">Ruta</string>
     <string name="filter">Filtrar</string>
     <string name="help">Ayuda</string>
-    <string name="profile">Perfil</string>
+    <string name="logout">Perfil</string>
     <string name="preferences">Preferencias</string>
 
     <!-- Personalized marker -->
