--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,10 @@
     <string name="app_name">Route Map</string>
 
     <!-- Login layout -->
-    <string name="loginTextLabel">Accede a tu cuenta</string>
     <string name="user">Usuario</string>
     <string name="password">Contraseña</string>
-    <string name="loginLabel">Iniciar sesion</string>
-    <string name="registerTextLabel">¿Todavia no tienes una cuenta?</string>
-    <string name="registerLabel">Registrarse</string>
+    <string name="loginLabel">Entrar</string>
+    <string name="registerLabel">Registrate aqui</string>
 
     <!-- Register layout -->
     <string name="email">Email</string>
