Setting for choose network type

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,9 @@
         <item>Hibrido</item>
     </string-array>
 
+    <string-array name="networkSpinnerType">
+        <item>Wifi</item>
+        <item>Datos</item>
+    </string-array>
+
 </resources>
