--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,9 @@
         <item>Datos</item>
     </string-array>
 
+    <string-array name="subscriptionSpinnerType">
+        <item>Desactivada</item>
+        <item>Activada</item>
+    </string-array>
+
 </resources>
