Change Date preferences to a Spinner option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,12 @@
         <item>Datos</item>
     </string-array>
 
+    <string-array name="daysMarkersSpinner">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <string-array name="subscriptionSpinnerType">
         <item>Desactivada</item>
         <item>Activada</item>
